--- a/nicnbk-ui-angular2/src/app/reporting/view/tarragon.generated.form.nb.reporting.component.html
+++ b/nicnbk-ui-angular2/src/app/reporting/view/tarragon.generated.form.nb.reporting.component.html
@@ -12,7 +12,22 @@
                 <!--</li>-->
                 <!--<li><span *ngIf="reportId != null"><a [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]">NICK MF Input</a></span></li>-->
                 <!--<li class="active">Tarragon - Generated Form</li>-->
-                <li class="active">Input</li>
+                <li>
+                    <span><a [routerLink]="['/reporting/NBReporting/inputFileUpload/', reportId]">1.Files</a></span>
+                </li>
+                <li>
+                    <span><a [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]">2.NICK MF</a></span>
+                </li>
+                <li class="active">3.TarragonGL</li>
+                <li>
+                    <span><a [routerLink]="['/reporting/NBReporting/TerraGeneratedForm/', reportId]">4.TerraGL</a></span>
+                </li>
+                <li>
+                    <span><a [routerLink]="['/reporting/NBReporting/previousYearInput/', reportId]">5.PrevYear</a></span>
+                </li>
+                <li>
+                    <span><a [routerLink]="['/reporting/NBReporting/GeneratedReports/', reportId, 'REPORTS']">Generate Reports</a></span>
+                </li>
             </ol>
         </div>
     </div>
@@ -29,6 +44,17 @@
     <div class="row withpadding">
         <h3 *ngIf="reportId != null">3. Tarragon - Generated General Ledger Form</h3>
     </div>
+    <div class="row withpadding">
+        <div class="col-md-1 pull-left">
+            <button class="btn btn-sm btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]"> <<
+            </button>
+        </div>
+        <div class="col-md-1 pull-right">
+            <button class="btn btn-sm btn-primary" [routerLink]="['/reporting/NBReporting/TerraGeneratedForm/', reportId]" [disabled]="!showNextButton()"> >>
+            </button>
+        </div>
+    </div>
+    <br/>
 
     <form (ngSubmit)="saveAddedRecords()" #addedRecordsForm="ngForm" class="well span">
         <div class="row withpadding">
@@ -114,20 +140,6 @@
             </div>
         </div>
     </form>
-
-    <br/>
-
-    <div class="row withpadding">
-        <div class="col-md-1 pull-left">
-            <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]">PREVIOUS
-            </button>
-        </div>
-        <div class="col-md-1 pull-right">
-            <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/TerraGeneratedForm/', reportId]" [disabled]="!showNextButton()">NEXT
-            </button>
-
-        </div>
-    </div>
     <br/>
     <div class="row withpadding">
         <div class="col-md-1 pull-right">
@@ -263,15 +275,16 @@
     <div class="row">
         <div class="col-md-6">
             <div class="col-md-1 pull-left">
-                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]">PREVIOUS
+                <button class="btn btn-sm btn-primary" [routerLink]="['/reporting/NBReporting/NICKMFInput/', reportId]"> <<
                 </button>
             </div>
         </div>
         <div class="col-md-6">
             <div class="col-md-1 pull-right">
-                <button class="btn btn-primary" [routerLink]="['/reporting/NBReporting/TerraGeneratedForm/', reportId]" [disabled]="!showNextButton()">NEXT</button>
+                <button class="btn btn-sm btn-primary" [routerLink]="['/reporting/NBReporting/TerraGeneratedForm/', reportId]" [disabled]="!showNextButton()"> >></button>
             </div>
         </div>
     </div>
     <br/><br/>
+
 </div>
