Changes in html

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
@@ -58,16 +58,16 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <h4>Performance NAV</h4>
                 <div id="portfolio_nav_table">
                 </div>
             </div>
-            <div class="col-md-6">
-                <h4>Portfolio Performance</h4>
-                <div id="portfolio_performance_table">
-                </div>
-            </div>
+<!--            <div class="col-md-6">-->
+<!--                <h4>Portfolio Performance</h4>-->
+<!--                <div id="portfolio_performance_table">-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
     <br/>
